--- a/css/common.css
+++ b/css/common.css
@@ -6,10 +6,27 @@
     padding-top: 1em;
     border-bottom: 1px solid #eee;
 }
+
 .good-name {
     display: flex;
     flex-direction: column;
 }
+
 .good-name span.subtitle {
     line-height: 0.7em
+}
+
+.flex {
+    display: flex;
+}
+
+.f-align-center {
+    align-items: center;
+}
+.f-align-f-e {
+    align-items: flex-end;
+}
+
+.f-justify-content-s-b {
+    justify-content: space-between;
 }
